Update overview items numbers when adding/removing a window item.

Because of splitscreen, it's now possible to remove an overview window
item to snap in splitscreen, or to add an overview window item from one
of the snapped windows in splitscreen, we should update the overview
items in these two cases. Otherwise in WindowSelector::Shutdown(), the
DCHECK(num_items_ >= remaining_items) might fail and the UMA stat
Ash.WindowSelector.OverviewClosedItems might not record the correct
number.

Bug: 822059
Change-Id: Ic60cd10a8e352bc6ea5c559b1d79f60dee7e81dd
Reviewed-on: https://chromium-review.googlesource.com/963723
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543638}
Former-commit-id: b647c5c03542d54fddee1d4970498b4627f55fd7